--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -366,6 +366,16 @@ a:focus, a:hover, a:active {
   color: #2C3E50 !important;
 }
 
+.text-third {
+  color: #fff !important;
+  
+}
+
+.no-padding{
+  padding-left:0;
+  padding-right:0;
+}
+
 .btn-primary {
   background-color: #18BC9C;
   border-color: #18BC9C;
